SERVER-19904 Added command to check element's type